# 3579

./: .coverage  .env.example  .gitignore  .gitmessage.txt  3579-live.spec  3579-paper.spec  Makefile  README.md  SPEC_RISK.md  TASKBOOK_FULL.md  TASKBOOK_FULL_WITH_LOOP_APPENDIX.md  V2_SPEC_EXPANDED_NOT_RUSHING_LAUNCH_Version2.md  V2_SPEC_NOT_RUSHING_LAUNCH.md  V4PRO-Makefile  V4PRO-bootstrap.ps1  bootstrap.ps1  claude  compose.debug.yaml  compose.yaml  coverage.json  current_files.txt  fix_routes.py  pyproject.toml  requirements-dev.txt  requirements.txt  schema.json  usage git [-v  --version] [-h  --help] [-C path] [-c name=value]
V4PRO/: .session_checkpoint_20251221.md  CLAUDE.md  KNOWLEDGE.md  PLANING.md  SESSION_2024_12_21.md  TASK.md  knowledge_warm.db  pyproject.toml  session_checkpoint_20251222.md  行为准则.md  量化架构师.md
V4PRO/.claude/: history.jsonl  settings.local.json
V4PRO/.claude/debug/: 0643ec44-c9d6-4e53-8208-ffbcd26fd380.txt  07cea9e8-adc1-4a27-8a10-3abe32bfdcfb.txt  0bab2494-6290-4b18-8daf-bfe0daeac4b1.txt  0d84aea7-e01a-4ecf-8a1e-ae7819048cf9.txt  1b0f5d8c-1499-4e41-87c2-08a09ee83955.txt  2389bc70-5db4-4247-8920-f132baa872b0.txt  25b62b3b-a5c4-478c-851f-ec755bb35549.txt  26327eac-db26-43e4-9ebe-e705920ea8a8.txt  264664be-73ae-40c2-a11b-3dcee4b9e6ff.txt  272e30dc-2b3c-4f47-ac1f-362323f55394.txt  2d5de454-3150-4a5f-8ff2-a3a0b869a637.txt  324b6d41-95db-4daf-b5d2-4a42622be8c1.txt  35870214-7eca-4459-90be-2cf8ec51c68a.txt  398b422c-bf59-48a8-be41-a858759c3533.txt  3a3e046e-17c1-46b2-b66d-28628d4fb99d.txt  3e20d9f1-c183-4c3c-8800-e9dfd1498a44.txt  465ec2f7-4901-44c5-b3de-f1147ca57960.txt  480f5e05-2b1e-4fb9-9ad8-41e771e761d6.txt  481310c4-b310-4914-9691-75463afe4dc0.txt  50e96974-fbd2-4879-b9c3-a2f78417f967.txt  58405196-b755-43cc-a96f-d6edda164a89.txt  595b0b83-8dae-4562-ab68-42da13a55513.txt  5b4d4487-d205-425c-b091-827425d1f317.txt  5df8b171-7c53-44fc-ae30-59448f03ef4b.txt  5ecd68b0-a305-4f8e-99a1-65ada5d546bc.txt  5fdc54d2-4ce2-467d-b8b5-99867a4640e6.txt  61d7b02d-ee32-4b76-9ddc-8eeca24f6017.txt  6210f051-8966-444e-a827-8c01b5233640.txt  655e0b81-4a56-4fa5-98f6-d4c34bf8fe46.txt  65b370e8-0d4b-4778-bf58-10b32351217a.txt  65e62b3a-fbf7-4e29-bfee-911ed5a7858c.txt  6b22f29b-0fbb-4af9-8be9-fdfdbc50d169.txt  6c4d54b7-2fad-4d62-9074-ca8edcb521fd.txt  6e203854-276f-4f8f-9433-73887675cbbd.txt  72a02afb-fa41-439e-ae50-5a1138af8b6b.txt  76c27e81-bba8-4146-8054-5c0c2f4d562f.txt  7c22a348-36e9-4fc0-a2f2-928f1a30ad37.txt  7d647c92-f899-4ec3-bf77-090519926c18.txt  81d79529-30ee-48be-b532-32c61437374e.txt  86f8bebc-cb9f-423f-9106-fd04d381bc50.txt  (+22 more)
V4PRO/.claude/telemetry/: 1p_failed_events.0643ec44-c9d6-4e53-8208-ffbcd26fd380.c1075a21-18dd-4a18-b2ce-cf254733a2d9.json  1p_failed_events.1c3d66ba-387e-4b0b-b8c8-633ae0fabc59.79b8b608-bdd2-41a3-9358-f2b123d14c25.json  1p_failed_events.2b404d8d-f8c6-401b-951d-3e1bd1258108.3e49e225-3aa9-4b01-bb35-82de98217a26.json  1p_failed_events.2f6b743e-9f56-4442-9f4c-46a3a3d396d0.5e1eee83-c904-42a4-9886-e547b232a7c8.json  1p_failed_events.32febec3-b24b-4609-9f2a-a452505f5111.6bd283d0-869e-4a6f-8ade-117aec5f5921.json  1p_failed_events.348f168a-fa36-41ae-815c-38f329b3216b.1376e271-194f-4857-8018-727c0530bf78.json  1p_failed_events.34fa9d83-80f0-4c6b-8eaa-e9d7eff30dc8.4b56d31e-164e-40d0-94b0-b1eec99a48e3.json  1p_failed_events.36d39e43-d097-4ae3-9ab1-55bb4bed7ef4.37eb5ad1-edfa-44cf-9038-b370129611ad.json  1p_failed_events.480f5e05-2b1e-4fb9-9ad8-41e771e761d6.959d4d62-43ba-409c-be76-f3fac0276ddc.json  1p_failed_events.4d771484-152b-42f5-8774-35d33e091447.f41b6b7a-02b4-44a5-88ca-ea9f83c0334e.json  1p_failed_events.709ef550-4735-4460-99e9-1e4bd2c0788c.a898e0dc-ad77-41bf-ada6-0ed3f67a709f.json  1p_failed_events.828aa19e-d6e0-4772-b9cd-86c2872e1805.d572dc3a-c4d2-44c6-80ff-2bad20853dee.json  1p_failed_events.8775f4bb-6b0c-4278-8697-212655b5cc38.6ecf953d-5bf1-4bf0-b09b-b3c700c4e01b.json  1p_failed_events.9420c56e-f712-4e2a-abb5-0950a7115c7e.ab3d47e6-6d0a-4311-af2d-c342221ba42f.json  1p_failed_events.a16941dd-d1b7-4aad-9ecc-ad99dc4cffe3.7b22e2cd-1261-42ae-8f0b-aab23330eceb.json  1p_failed_events.a742ae06-ccc2-41d3-a58f-5366ad6f6b20.2c55654a-02a0-4824-819e-cf125630e61b.json  1p_failed_events.a9335858-104c-4322-8238-a51286d6b6ab.fdf4bea4-4c07-4a88-bf5d-86efa0f1f997.json  1p_failed_events.b5f9f244-779f-49dc-8bee-90e2aaa4e471.e67b1e27-87e7-4b43-9eaf-38bc3cba47ea.json  1p_failed_events.b8b3aec1-ab9d-4fa0-b597-65bcc3db28f6.6a99fb32-b587-41a4-b7db-705e46acca43.json  1p_failed_events.be320cab-9b3f-4e7c-ad5b-6484511c5343.a4a47580-82e2-46a9-9922-03cdc1c9cc61.json  (+7 more)
V4PRO/agents/: 01_meta_orchestrator.md  02_self_evolution.md  03_deep_research.md  04_quant_architect.md  05_risk_control.md  06_strategy_engineer.md  07_ml_engineer.md  11_security_engineer.md  12_knowledge_curator.md  14_collaboration_matrix.md  README.md  __init__.py  agent_base.py  asset_allocation.py  auto_workflow.py  code_multilang_agent.py  collab.py  compliance-guard.md  data_fusion.py  debug_optimize.py  explainable.py  fin_multi_strategy_agent.py  knowledge.py  requirements.txt  risk_control.py  run_demo.py  security.py
V4PRO/artifacts/claude/: policy_violation.json  round_summary.json  (+1 more)
V4PRO/claudedocs/: session_checkpoint_2025-12-22.md
V4PRO/docs/: CIRCUIT_BREAKER_STATE_MACHINE_REPORT.md  V4PRO-CLAUDE_PROJECT_MEMORY.md  V4PROEXIT_CODES.md  V4PRO_ACCEPTANCE_MATRIX_SUPREME.md  V4PRO_AI_AGENTS.md  V4PRO_AI_AGENTS_SUPREME_UPGRADE.md  V4PRO_AUDIT_REPORT_ORIGINAL.md  V4PRO_IMPROVEMENT_DESIGN_v1.0.md  V4PRO_IMPROVEMENT_DESIGN_v1.1.md  V4PRO_IMPROVEMENT_DESIGN_v1.2.md  V4PRO_UPGRADE_PLAN_SUPREME_DIRECTIVE.md  confirmation_enhancement_design_report.md
V4PRO/scenarios/: v4PRO_required_scenarios.yml
V4PRO/scripts/: claude_auto_loop.py  export_context.py  fix_spaces.ps1  fix_upgrade_plan.ps1  make.ps1  replay_tick.py  sim_gate.py  v2_required_scenarios.yml  v3pro_strategies.yml  validate_policy.py  validate_scenarios.py
V4PRO/src/: README.md  main.py  orchestrator.py  runner.py
V4PRO/tests/: conftest.py  test_compliance_throttling.py  test_dl_module.py  test_ml_pipeline.py
aagent/: cli.py  (+5 more)
(+2557 files in other folders)
